--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,7 +10,8 @@ en:
   label_schedule_edit: Editing schedule for {{target}}
   label_f_short_hour: %.0f hour
   label_f_short_hour_plural: %.0f hours
-  label_user_schedule: %s's schedule
+  label_user_schedule: "{{user}}'s schedule"
   label_project_schedule: Schedule
+  label_schedules_available: Available
   label_availability_schedule: Schedule availabilities
   label_global_schedule: All schedules
