--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,5 +1,5 @@
 de:
-  label_schedules_my: Mein Kalender
+  label_schedules_my_index: Mein Kalender
   label_schedules_report: Kalender Report
   label_schedules_details: Kalender Details
   label_schedules_index: Kalender
