--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -1,5 +1,5 @@
 he:
-  label_schedules_my: המשימות שלי
+  label_schedules_my_index: המשימות שלי
   label_schedules_report: דוח משימות
   label_schedules_details: פרטי משימה
   label_schedules_index: משימות
