--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1,5 +1,5 @@
 it:
-  label_schedules_my: Il mio Scadenzario
+  label_schedules_my_index: Il mio Scadenzario
   label_schedules_report: Report scadenze
   label_schedules_details: Dettagli scadenze
   label_schedules_index: Scadenze
