Allow admins to edit default availability of other users

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,4 +26,4 @@ en:
   error_schedules_estimate_insufficient_scheduling: Not enough time scheduled for {{user}} to address {{issue}}
   error_schedules_insufficient_availability: Some user's entries could not be saved as there was not enough room in their schedules.
   button_schedules_edit: Edit schedule
-  button_schedules_default_edit: Edit my default availability
+  button_schedules_default_edit: Edit default availability
