--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,6 +1,6 @@
 de:
   label_schedules_my_index: Mein Zeitplan
-  label_schedules_default: Bearbeite Standardverfügbarkeit für {{target}}
+  label_schedules_default: Bearbeite Standardverfügbarkeit für %s
   label_schedules_report: Zeitplan Report
   label_schedules_details: Zeitplan Details
   label_schedules_index: Zeitplan
@@ -8,8 +8,8 @@ de:
   label_schedules_users: Nutzer Zeitpläne
   label_schedules_send_update: Benachrichtige Nutzer über Änderungen in ihrem Zeitplan
   label_schedules_updated: Zeitplan aktualisiert.
-  label_schedule_edit: Bearbeite Zeitplan für {{target}}
-  label_user_schedule: "{{user}}'s Zeitplan"
+  label_schedule_edit: Bearbeite Zeitplan für %s
+  label_user_schedule: %s's Zeitplan
   label_project_schedule: Zeitplan
   label_schedules_available: Verfügbar
   label_schedules_unavailable: Nicht verfügbar
@@ -21,7 +21,7 @@ de:
   error_schedules_estimate_unassigned_issues: Alle Tickets dieser Version müssen zugewiesen sein.
   error_schedules_estimate_open_interversion_parents: Alle offenen Ticket-Beziehungen müssen in dieser Version sein.
   error_schedules_estimate_project_unscheduled: Dieses Projekt wurde nicht geplant.
-  error_schedules_estimate_insufficient_scheduling: "{{user}} ist nicht genügend Zeit geplant für {{issue}}"
+  error_schedules_estimate_insufficient_scheduling: %s ist nicht genügend Zeit geplant für %s
   error_schedules_insufficient_availability: Die Einträge einiger Benutzer konnten augrund mangelnder Verfügbarkeit im ihrem Zeitplan nicht gespeichert werden.
   button_schedules_edit: Zeitplan bearbeiten
   button_schedules_default_edit: Standardverfügbarkeit bearbeiten
