--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
 en:
   label_schedules_my_index: My schedule
-  label_schedules_default: Editing default availability for {{target}}
+  label_schedules_default: Editing default availability for %s
   label_schedules_report: Schedule report
   label_schedules_details: Schedule details
   label_schedules_index: Schedule
@@ -8,8 +8,8 @@ en:
   label_schedules_users: User schedules
   label_schedules_send_update: Send schedule updates to their respective users
   label_schedules_updated: Schedules updated.
-  label_schedule_edit: Editing schedule for {{target}}
-  label_user_schedule: "{{user}}'s schedule"
+  label_schedule_edit: Editing schedule for %s
+  label_user_schedule: "%s's schedule"
   label_project_schedule: Schedule
   label_schedules_available: Available
   label_schedules_unavailable: Unavailable
@@ -21,8 +21,8 @@ en:
   error_schedules_estimate_unassigned_issues: Ensure all issues in this version are assigned.
   error_schedules_estimate_open_interversion_parents: Ensure all open issue relations are in the version.
   error_schedules_estimate_project_unscheduled: This project has not been scheduled.
-  error_schedules_estimate_insufficient_scheduling: Not enough time scheduled for {{user}} to address {{issue}}
-  error_schedules_estimate_insufficient_scheduling_future: Not enough time scheduled for {{user}} to address {{issue}} past {{date}}
+  error_schedules_estimate_insufficient_scheduling: Not enough time scheduled for %s to address %s
+  error_schedules_estimate_insufficient_scheduling_future: Not enough time scheduled for %s to address %s past %s
   error_schedules_insufficient_availability: Some user's entries could not be saved as there was not enough room in their schedules.
   button_schedules_edit: Edit schedule
   button_schedules_default_edit: Edit default availability
