--- a/lang/en.yml
+++ b/lang/en.yml
@@ -20,7 +20,7 @@
   error_schedules_estimate_unestimated_issues: Ensure all issues in this version have estimated times.
   error_schedules_estimate_unassigned_issues: Ensure all issues in this version are assigned.
   error_schedules_estimate_open_interversion_parents: Ensure all open issue relations are in the version.
-  error_schedules_estimate_insufficient_scheduling: Users must be scheduled before estimating due dates. %s
+  error_schedules_estimate_insufficient_scheduling: Insufficient scheduling for estimate. %s
   error_schedules_insufficient_availability: Some user's entries could not be saved as there was not enough room in their schedules.
   button_schedules_edit: Edit schedule
   button_schedules_default_edit: Edit default availability
