Adding a new My Page widget that displays the difference between logged and spent hours over the current day, week and month.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,6 +19,7 @@ en:
   label_schedules_unavailable: Unavailable
   label_availability_schedule: Schedule availabilities
   label_global_schedule: All schedules
+  label_scheduled_vs_spent_time: Spent vs. Scheduled time
   label_schedules_estimate: Estimate
   label_schedules_estimate_updated: Issues and version dates updated.
   error_schedules_not_enabled: Schedules module not enabled
