%s replaced in all languages with {{value}} macro

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,34 +1,34 @@
 en:
-  label_schedules_my_index: My schedule
-  label_schedules_default: Editing default availability for %s
-  label_schedules_report: Schedule report
-  label_schedules_details: Schedule details
-  label_schedules_index: Schedule
-  label_schedules_projects: Project schedules
-  label_schedules_users: User schedules
-  label_schedules_send_update: Send schedule updates to their respective users
-  label_schedules_updated: Schedules updated.
-  label_schedule_edit: Editing schedule for %s
-  label_schedules_fill: Fill schedule
-  label_schedules_fill_description: This tool will help you fill up a project's schedule with available hours for the specified users. Simply specify the maximum number of hours you want each user to work on this project per day, the total number of hours to populate, and submit the form. Available time for each user will be consumed to satisfy your specifications.
-  label_schedules_fill_week_header: Maximum hours to allocate per day, if available
-  label_schedules_fill_total_header: Total hours to fill
-  label_user_schedule: "%s's schedule"
-  label_project_schedule: Schedule
-  label_schedules_available: Available
-  label_schedules_unavailable: Unavailable
-  label_availability_schedule: Schedule availabilities
-  label_global_schedule: All schedules
-  label_scheduled_vs_spent_time: Spent vs. Scheduled time
-  label_schedules_estimate: Estimate
-  label_schedules_estimate_updated: Issues and version dates updated.
-  error_schedules_not_enabled: Schedules module not enabled
-  error_schedules_estimate_unestimated_issues: Ensure all issues in this version have estimated times.
-  error_schedules_estimate_unassigned_issues: Ensure all issues in this version are assigned.
-  error_schedules_estimate_open_interversion_parents: Ensure all open issue relations are in the version.
-  error_schedules_estimate_insufficient_scheduling: Insufficient scheduling for estimate. %s
-  error_schedules_insufficient_availability: Some user's entries could not be saved as there was not enough room in their schedules.
-  button_schedules_edit: Edit schedule
-  button_schedules_default_edit: Edit default availability
-  button_schedules_fill: Fill schedule
-  button_save_next: Save and edit next week
+  label_schedules_my_index: "My schedule"
+  label_schedules_default: "Editing default availability for {{value}}"
+  label_schedules_report: "Schedule report"
+  label_schedules_details: "Schedule details"
+  label_schedules_index: "Schedule"
+  label_schedules_projects: "Project schedules"
+  label_schedules_users: "User schedules"
+  label_schedules_send_update: "Send schedule updates to their respective users"
+  label_schedules_updated: "Schedules updated."
+  label_schedule_edit: "Editing schedule for {{value}}"
+  label_schedules_fill: "Fill schedule"
+  label_schedules_fill_description: "This tool will help you fill up a project's schedule with available hours for the specified users. Simply specify the maximum number of hours you want each user to work on this project per day, the total number of hours to populate, and submit the form. Available time for each user will be consumed to satisfy your specifications."
+  label_schedules_fill_week_header: "Maximum hours to allocate per day, if available"
+  label_schedules_fill_total_header: "Total hours to fill"
+  label_user_schedule: ""{{value}}'s schedule""
+  label_project_schedule: "Schedule"
+  label_schedules_available: "Available"
+  label_schedules_unavailable: "Unavailable"
+  label_availability_schedule: "Schedule availabilities"
+  label_global_schedule: "All schedules"
+  label_scheduled_vs_spent_time: "Spent vs. Scheduled time"
+  label_schedules_estimate: "Estimate"
+  label_schedules_estimate_updated: "Issues and version dates updated."
+  error_schedules_not_enabled: "Schedules module not enabled"
+  error_schedules_estimate_unestimated_issues: "Ensure all issues in this version have estimated times."
+  error_schedules_estimate_unassigned_issues: "Ensure all issues in this version are assigned."
+  error_schedules_estimate_open_interversion_parents: "Ensure all open issue relations are in the version."
+  error_schedules_estimate_insufficient_scheduling: "Insufficient scheduling for estimate. {{value}}"
+  error_schedules_insufficient_availability: "Some user's entries could not be saved as there was not enough room in their schedules."
+  button_schedules_edit: "Edit schedule"
+  button_schedules_default_edit: "Edit default availability"
+  button_schedules_fill: "Fill schedule"
+  button_save_next: "Save and edit next week"
