--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,26 +1,26 @@
 fr:
-  label_schedules_my_index: Mon planning
-  label_schedules_default: Modifier la disponibilité par défaut pour %s
-  label_schedules_report: Rapport planning
-  label_schedules_details: Détails planning
-  label_schedules_index: Planning
-  label_schedules_projects: Plannings projet
-  label_schedules_users: Plannings utilisateur
-  label_schedules_send_update: Notifier les utilisateurs des changements dans leur planning
-  label_schedules_updated: Plannings mis à jour.
-  label_schedule_edit: Modifier planning pour %s
-  label_user_schedule: Planning de %s
-  label_project_schedule: Planning
-  label_schedules_available: Disponible
-  label_schedules_unavailable: Non disponible
-  label_availability_schedule: Planning disponibilité
-  label_global_schedule: Tous les plannings
-  label_schedules_estimate: Estimation
-  label_schedules_estimate_updated: Dates des demandes et de version mises à jour.
-  error_schedules_estimate_unestimated_issues: Assurez vous que chaque demande pour cette version a une durée estimée.
-  error_schedules_estimate_unassigned_issues: Assurez vous que toutes les demandes pour cette version sont assignées.
-  error_schedules_estimate_open_interversion_parents: Assurez vous que toutes les relations de demandes ouvertes sont dans la version.
-  error_schedules_estimate_insufficient_scheduling: Temps planifié de %s insuffisant pour %s
-  error_schedules_insufficient_availability: Les entrées pour quelques utilisateurs n'ont pas pu être sauvegardées car il n'y a pas assez de temps libre dans leur planning.
-  button_schedules_edit: Modifier planning
-  button_schedules_default_edit: Modifier disponibilité par défaut
+  label_schedules_my_index: "Mon planning"
+  label_schedules_default: "Modifier la disponibilité par défaut pour {{value}}"
+  label_schedules_report: "Rapport planning"
+  label_schedules_details: "Détails planning"
+  label_schedules_index: "Planning"
+  label_schedules_projects: "Plannings projet"
+  label_schedules_users: "Plannings utilisateur"
+  label_schedules_send_update: "Notifier les utilisateurs des changements dans leur planning"
+  label_schedules_updated: "Plannings mis à jour."
+  label_schedule_edit: "Modifier planning pour {{value}}"
+  label_user_schedule: "Planning de {{value}}"
+  label_project_schedule: "Planning"
+  label_schedules_available: "Disponible"
+  label_schedules_unavailable: "Non disponible"
+  label_availability_schedule: "Planning disponibilité"
+  label_global_schedule: "Tous les plannings"
+  label_schedules_estimate: "Estimation"
+  label_schedules_estimate_updated: "Dates des demandes et de version mises à jour."
+  error_schedules_estimate_unestimated_issues: "Assurez vous que chaque demande pour cette version a une durée estimée."
+  error_schedules_estimate_unassigned_issues: "Assurez vous que toutes les demandes pour cette version sont assignées."
+  error_schedules_estimate_open_interversion_parents: "Assurez vous que toutes les relations de demandes ouvertes sont dans la version."
+  error_schedules_estimate_insufficient_scheduling: "Temps planifié de {{value}} insuffisant pour {{value}}"
+  error_schedules_insufficient_availability: "Les entrées pour quelques utilisateurs n'ont pas pu être sauvegardées car il n'y a pas assez de temps libre dans leur planning."
+  button_schedules_edit: "Modifier planning"
+  button_schedules_default_edit: "Modifier disponibilité par défaut"
