Took out 'week' from the 'Save and edit next' button

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,4 +31,4 @@ en:
   button_schedules_edit: Edit schedule
   button_schedules_default_edit: Edit default availability
   button_schedules_fill: Fill schedule
-  button_save_next: Save and edit next week
+  button_save_next: Save and edit next
