--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,7 +13,7 @@ en:
   label_schedules_fill_description: "This tool will help you fill up a project's schedule with available hours for the specified users. Simply specify the maximum number of hours you want each user to work on this project per day, the total number of hours to populate, and submit the form. Available time for each user will be consumed to satisfy your specifications."
   label_schedules_fill_week_header: "Maximum hours to allocate per day, if available"
   label_schedules_fill_total_header: "Total hours to fill"
-  label_user_schedule: ""{{value}}'s schedule""
+  label_user_schedule: "{{value}}'s schedule"
   label_project_schedule: "Schedule"
   label_schedules_available: "Available"
   label_schedules_unavailable: "Unavailable"
