--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -9,7 +9,7 @@ es:
   label_schedules_send_update: "Enviar actualizaciones de la agenda a los respectivos usuarios"
   label_schedules_updated: "Agenda Actualizada."
   label_schedule_edit: "Editando Agenda de {{value}}"
-  label_user_schedule: ""Agenda de {{value}}""
+  label_user_schedule: "Agenda de {{value}}"
   label_project_schedule: "Agenda"
   label_schedules_available: "Disponible"
   label_schedules_unavailable: "No disponible"
