--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -9,7 +9,7 @@ nl:
   label_schedules_send_update: "Stuur planning updates naar gebruikers"
   label_schedules_updated: "Planningen bijgewerkt."
   label_schedule_edit: "Planning bewerken voor {{value}}"
-  label_user_schedule: ""{{value}}'s planning""
+  label_user_schedule: "{{value}}'s planning"
   label_project_schedule: "Planning"
   label_schedules_available: "Beschikbaar"
   label_schedules_unavailable: "Niet beschikbaar"
@@ -22,7 +22,7 @@ nl:
   error_schedules_estimate_open_interversion_parents: "Let op dat alle open issue relaties in deze versie zitten."
   error_schedules_estimate_insufficient_scheduling: "Niet genoeg tijd beschikbaar voor {{value}} om te werken aan {{value}}"
   error_schedules_estimate_insufficient_scheduling_future: "Niet genoeg tijd beschikbaar voor {{value}} om te werken aan {{value}} na {{value}}"
-  error_schedules_insufficient_availability: ""Sommige gebruikers items konden niet bewaard worden, aangezien er niet genoeg tijd beschikbaar was in hun planning.""
+  error_schedules_insufficient_availability: "Sommige gebruikers items konden niet bewaard worden, aangezien er niet genoeg tijd beschikbaar was in hun planning."
   button_schedules_edit: "Bewerk planning"
   button_schedules_default_edit: "Bewerk beschikbaarheid"
   button_schedules_fill: "Vul beschikbaarheid"
