--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -1,34 +1,35 @@
 cs:
-  label_schedules_my_index: "Mé plány"
+  project_module_schedule_module: Rozvrh
+  label_schedules_my_index: "Mé rozvrhy"
   label_schedules_default: "Úprava výchozí dostupnosti pro {{value}}"
   label_schedules_report: "Report plánu"
-  label_schedules_details: "Podrobnosti plánu"
-  label_schedules_index: "Plán"
-  label_schedules_projects: "Plány projektu"
-  label_schedules_users: "Plány uživateles"
-  label_schedules_send_update: "Poslat změny plánu příslušným uživatelům"
-  label_schedules_updated: "Plány aktualizovány."
-  label_schedule_edit: "Úprava plánu pro {{value}}"
-  label_schedules_fill: "Vyplnění plánu"
-  label_schedules_fill_description: "Tento nástroj Vám pomůže vyplnit projektový plán s dostupnými hodinami pro zadané uživatele. Stačí zadat maximální počet hodin, který chcete dát každému uživateli na tomto projektu za den, celkový počet hodin, který chcete obsadit a odešlete formulář. Dostupný čas každého uživatele bude spotřebovanám k uspokojení Vašich požadavků."
+  label_schedules_details: "Podrobnosti rozvrhu"
+  label_schedules_index: "Rozvrh"
+  label_schedules_projects: "Rozvrh projektu"
+  label_schedules_users: "Rozvrh uživatele"
+  label_schedules_send_update: "Poslat změny rozvrhu příslušným uživatelům"
+  label_schedules_updated: "Rozvrhy aktualizovány."
+  label_schedule_edit: "Úprava Rozvrhu pro {{value}}"
+  label_schedules_fill: "Vyplnění rozvrhu"
+  label_schedules_fill_description: "Tento nástroj Vám pomůže vyplnit projektový rozvrh s dostupnými hodinami pro zadané uživatele. Stačí zadat maximální počet hodin, který chcete dát každému uživateli na tomto projektu za den, celkový počet hodin, který chcete obsadit a odešlete formulář. Dostupný čas každého uživatele bude spotřebovanám k uspokojení Vašich požadavků."
   label_schedules_fill_week_header: "Maximální počet hodin přiřazených na den, pokud jsou k dispozici"
   label_schedules_fill_total_header: "Celkový počet hodin k vyplnění"
-  label_user_schedule: "Plán uživatele {{value}}"
-  label_project_schedule: "Plán"
+  label_user_schedule: "Rozvrh uživatele {{value}}"
+  label_project_schedule: "Rozvrh"
   label_schedules_available: "Dostupný"
   label_schedules_unavailable: "Nedostupný"
-  label_availability_schedule: "Plán dostupnosti"
-  label_global_schedule: "Všechny plány"
+  label_availability_schedule: "Rozvrh dostupnosti"
+  label_global_schedule: "Všechny rozvrhy"
   label_scheduled_vs_spent_time: "Strávený / Plánovaný čas"
   label_schedules_estimate: "Odhad"
   label_schedules_estimate_updated: "Úkoly a datumy verzí aktualizovány."
-  error_schedules_not_enabled: "Modul 'Plány' není zapnutý"
+  error_schedules_not_enabled: "Modul 'Rozvrhy' není zapnutý"
   error_schedules_estimate_unestimated_issues: "zajistit, aby všechny úkoly v této verzi měly odhadnuté časy."
   error_schedules_estimate_unassigned_issues: "Zajistit, všechny úkoly v této verzi byly přiřazené."
   error_schedules_estimate_open_interversion_parents: "Zajistit, aby všechny otevřené úkoly s přiřazením měli nastavenou verzi."
   error_schedules_estimate_insufficient_scheduling: "Nedostatečné plánování pro odhad. {{value}}"
-  error_schedules_insufficient_availability: "Některé uživatelské položky nelze uložit, protože nebyl dostatek místa v jejich plánech."
-  button_schedules_edit: "Upravita plán"
+  error_schedules_insufficient_availability: "Některé uživatelské položky nelze uložit, protože nebyl dostatek místa v jejich rozvrzích."
+  button_schedules_edit: "Upravit rozvrh"
   button_schedules_default_edit: "Upravit výchozí dostupnost"
-  button_schedules_fill: "Vyplnit plán"
+  button_schedules_fill: "Vyplnit rozvrh"
   button_save_next: "Uložit a upravit další týden"
