--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -36,3 +36,5 @@ cs:
   permission_view_schedules: "Zobrazit rozvrhy"
   permission_edit_own_schedules: "Upravit vlastní rozvrhy"
   permission_edit_all_schedules: "Upravit všechny rozvrhy"
+  my_schedule: Mé rozvrhy
+  scheduled_vs_spent_time: Strávený / Plánovaný čas
