--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,6 +1,6 @@
 de:
   label_schedules_my_index: "Mein Zeitplan"
-  label_schedules_default: "Bearbeite Standardverfügbarkeit für {{value}}"
+  label_schedules_default: "Bearbeite Standardverfügbarkeit für %{value}"
   label_schedules_report: "Zeitplan Report"
   label_schedules_details: "Zeitplan Details"
   label_schedules_index: "Zeitplan"
@@ -8,8 +8,8 @@ de:
   label_schedules_users: "Nutzer Zeitpläne"
   label_schedules_send_update: "Benachrichtige Nutzer über Änderungen in ihrem Zeitplan"
   label_schedules_updated: "Zeitplan aktualisiert."
-  label_schedule_edit: "Bearbeite Zeitplan für {{value}}"
-  label_user_schedule: "Zeitplan für {{value}}"
+  label_schedule_edit: "Bearbeite Zeitplan für %{value}"
+  label_user_schedule: "Zeitplan für %{value}"
   label_project_schedule: "Zeitplan"
   label_schedules_available: "Verfügbar"
   label_schedules_unavailable: "Nicht verfügbar"
@@ -25,7 +25,7 @@ de:
   error_schedules_estimate_unestimated_issues: "Der Aufwand aller Tickets in dieser Version muss geschätzt sein."
   error_schedules_estimate_unassigned_issues: "Alle Tickets dieser Version müssen zugewiesen sein."
   error_schedules_estimate_open_interversion_parents: "Alle offenen Ticket-Beziehungen müssen in dieser Version sein."
-  error_schedules_estimate_insufficient_scheduling: "{{value}} ist nicht genügend Zeit geplant für {{value}}"
+  error_schedules_estimate_insufficient_scheduling: "%{value} ist nicht genügend Zeit geplant für %{value}"
   error_schedules_insufficient_availability: "Die Einträge einiger Benutzer konnten augrund mangelnder Verfügbarkeit im ihrem Zeitplan nicht gespeichert werden."
   error_schedules_not_enabled: "Das Zeitplan-Modul (Schedule module) ist nicht aktiv."
   button_save_next: "Speichern und nächstes"
