--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,6 +1,6 @@
 es:
   label_schedules_my_index: "Mi Agenda"
-  label_schedules_default: "Editar disponibilidad de {{value}}"
+  label_schedules_default: "Editar disponibilidad de %{value}"
   label_schedules_report: "Informe de la Agenda"
   label_schedules_details: "Detalles de la Agenda"
   label_schedules_index: "Agenda"
@@ -8,8 +8,8 @@ es:
   label_schedules_users: "Agendas de Usuarios"
   label_schedules_send_update: "Enviar actualizaciones de la agenda a los respectivos usuarios"
   label_schedules_updated: "Agenda Actualizada."
-  label_schedule_edit: "Editando Agenda de {{value}}"
-  label_user_schedule: "Agenda de {{value}}"
+  label_schedule_edit: "Editando Agenda de %{value}"
+  label_user_schedule: "Agenda de %{value}"
   label_project_schedule: "Agenda"
   label_schedules_available: "Disponible"
   label_schedules_unavailable: "No disponible"
@@ -20,7 +20,7 @@ es:
   error_schedules_estimate_unestimated_issues: "Asegurese que todas las actividades han sido estimadas."
   error_schedules_estimate_unassigned_issues: "Asegurese que todas las actividades en esta version han sido asignadas."
   error_schedules_estimate_open_interversion_parents: "Ensure all open issue relations are in the version."
-  error_schedules_estimate_insufficient_scheduling: "No se ha agendado suficiente tiempo para {{value}} para realizar {{value}}"
+  error_schedules_estimate_insufficient_scheduling: "No se ha agendado suficiente tiempo para %{value} para realizar %{value}"
   error_schedules_insufficient_availability: "Algunas de las entradas en la agenda del usuario no pudiendo guardarse por falta de disponibilidad"
   button_schedules_edit: "Editar Agenda"
   button_schedules_default_edit: "Editar mi disponibilidad"
