--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -7,8 +7,8 @@ he:
   label_schedules_users: "משימוות משתמש"
   label_schedules_send_update: "שלח עידכוני משימות למשתמש"
   label_schedules_updated: "משימות מעודכנות"
-  label_schedule_edit: "'{{value}} עידכון משימה עבור'"
-  label_user_schedule: "'{{value}} משימות של '"
+  label_schedule_edit: "'%{value} עידכון משימה עבור'"
+  label_user_schedule: "'%{value} משימות של '"
   label_project_schedule: "משימות"
   label_schedules_available: "פנוי"
   label_availability_schedule: "פנוי למשימות"
