--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -7,8 +7,8 @@ it:
   label_schedules_users: "Scadenze utente"
   label_schedules_send_update: "Invia gli aggiornamenti delle scadenze ad i rispettivi utenti"
   label_schedules_updated: "Aggiornamento scadenze."
-  label_schedule_edit: "Edita la scadenza per {{value}}"
-  label_user_schedule: "scadenza di {{value}}"
+  label_schedule_edit: "Edita la scadenza per %{value}"
+  label_user_schedule: "scadenza di %{value}"
   label_project_schedule: "Scadenze"
   label_schedules_available: "Disponibilita"
   label_availability_schedule: "Disponibilita' Scadenze"
