--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,6 +1,6 @@
 ru:
   label_schedules_my_index: "Мое расписание"
-  label_schedules_default: "Изменение обычного расписания для {{value}}"
+  label_schedules_default: "Изменение обычного расписания для %{value}"
   label_schedules_report: "Отчет по расписанию"
   label_schedules_details: "Подробности расписания"
   label_schedules_index: "Расписание"
@@ -8,8 +8,8 @@ ru:
   label_schedules_users: "Расписания пользователей"
   label_schedules_send_update: "Отправить обновления расписания соответствующим пользователям"
   label_schedules_updated: "Расписания обновлены."
-  label_schedule_edit: "Изменение расписания для {{value}}"
-  label_user_schedule: "Расписание для {{value}}"
+  label_schedule_edit: "Изменение расписания для %{value}"
+  label_user_schedule: "Расписание для %{value}"
   label_project_schedule: "Расписание"
   label_schedules_available: "Доступен"
   label_schedules_unavailable: "Недоступен"
@@ -20,7 +20,7 @@ ru:
   error_schedules_estimate_unestimated_issues: "Все задачи этой версии должны иметь оценки времени выполнения."
   error_schedules_estimate_unassigned_issues: "Все задачи этой версии должны быть назначены."
   error_schedules_estimate_open_interversion_parents: "Все открытые задачи должны быть связаны с соответствующей версией."
-  error_schedules_estimate_insufficient_scheduling: "{{value}} не хватает времени для выполнения {{value}}"
+  error_schedules_estimate_insufficient_scheduling: "%{value} не хватает времени для выполнения %{value}"
   error_schedules_insufficient_availability: "Изменения в расписании некоторых пользователей не были сохранены из за недостатка доступного времени."
   button_schedules_edit: "Изменить расписание"
   button_schedules_default_edit: "Изменить мое обычное расписание"
