--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,6 +1,6 @@
 fr:
   label_schedules_my_index: "Mon planning"
-  label_schedules_default: "Modifier la disponibilité par défaut pour {{value}}"
+  label_schedules_default: "Modifier la disponibilité par défaut pour %{value}"
   label_schedules_report: "Rapport planning"
   label_schedules_details: "Détails planning"
   label_schedules_index: "Planning"
@@ -8,8 +8,8 @@ fr:
   label_schedules_users: "Plannings utilisateur"
   label_schedules_send_update: "Notifier les utilisateurs des changements dans leur planning"
   label_schedules_updated: "Plannings mis à jour."
-  label_schedule_edit: "Modifier planning pour {{value}}"
-  label_user_schedule: "Planning de {{value}}"
+  label_schedule_edit: "Modifier planning pour %{value}"
+  label_user_schedule: "Planning de %{value}"
   label_project_schedule: "Planning"
   label_schedules_available: "Disponible"
   label_schedules_unavailable: "Non disponible"
@@ -20,7 +20,7 @@ fr:
   error_schedules_estimate_unestimated_issues: "Assurez vous que chaque demande pour cette version a une durée estimée."
   error_schedules_estimate_unassigned_issues: "Assurez vous que toutes les demandes pour cette version sont assignées."
   error_schedules_estimate_open_interversion_parents: "Assurez vous que toutes les relations de demandes ouvertes sont dans la version."
-  error_schedules_estimate_insufficient_scheduling: "Temps planifié de {{value}} insuffisant pour {{value}}"
+  error_schedules_estimate_insufficient_scheduling: "Temps planifié de %{value} insuffisant pour %{value}"
   error_schedules_insufficient_availability: "Les entrées pour quelques utilisateurs n'ont pas pu être sauvegardées car il n'y a pas assez de temps libre dans leur planning."
   button_schedules_edit: "Modifier planning"
   button_schedules_default_edit: "Modifier disponibilité par défaut"
