--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -1,6 +1,6 @@
 nl:
   label_schedules_my_index: "Mijn planning"
-  label_schedules_default: "Beschikbaarheid bewerken van {{value}}"
+  label_schedules_default: "Beschikbaarheid bewerken van %{value}"
   label_schedules_report: "Plannings rapportage"
   label_schedules_details: "Planning details"
   label_schedules_index: "Planning"
@@ -8,8 +8,8 @@ nl:
   label_schedules_users: "Gebruiker planningen"
   label_schedules_send_update: "Stuur planning updates naar gebruikers"
   label_schedules_updated: "Planningen bijgewerkt."
-  label_schedule_edit: "Planning bewerken voor {{value}}"
-  label_user_schedule: "{{value}}'s planning"
+  label_schedule_edit: "Planning bewerken voor %{value}"
+  label_user_schedule: "%{value}'s planning"
   label_project_schedule: "Planning"
   label_schedules_available: "Beschikbaar"
   label_schedules_unavailable: "Niet beschikbaar"
@@ -20,8 +20,8 @@ nl:
   error_schedules_estimate_unestimated_issues: "Let op dat alle issues in deze versie geschatte tijden moeten hebben."
   error_schedules_estimate_unassigned_issues: "Let op dat alle issues in deze versie zijn toegewezen."
   error_schedules_estimate_open_interversion_parents: "Let op dat alle open issue relaties in deze versie zitten."
-  error_schedules_estimate_insufficient_scheduling: "Niet genoeg tijd beschikbaar voor {{value}} om te werken aan {{value}}"
-  error_schedules_estimate_insufficient_scheduling_future: "Niet genoeg tijd beschikbaar voor {{value}} om te werken aan {{value}} na {{value}}"
+  error_schedules_estimate_insufficient_scheduling: "Niet genoeg tijd beschikbaar voor %{value} om te werken aan %{value}"
+  error_schedules_estimate_insufficient_scheduling_future: "Niet genoeg tijd beschikbaar voor %{value} om te werken aan %{value} na %{value}"
   error_schedules_insufficient_availability: "Sommige gebruikers items konden niet bewaard worden, aangezien er niet genoeg tijd beschikbaar was in hun planning."
   button_schedules_edit: "Bewerk planning"
   button_schedules_default_edit: "Bewerk beschikbaarheid"
